# wcomm-rs

./: .gitignore  Cargo.toml  README.md
examples/huffman_coding/: main.rs
examples/message/: main.rs
examples/sound_channel/: main.rs
examples/wav_export/: main.rs
src/: lib.rs  message.rs
src/channels/: channel.rs  mod.rs  sound.rs
src/encoding/: mod.rs
src/encoding/channel/: hamming.rs  mod.rs
src/encoding/source/: huffman.rs  mod.rs  source_coding.rs
src/modulation/: fsk.rs  mfsk.rs  mod.rs  modulator.rs  mqam.rs  qam.rs
src/utils/: math.rs  mod.rs
tests/utils/: math.rs
