[package]
name = "wcomm"
description = "API for wireless communications"
homepage = "https://github.com/No-tengo-nombre/wcomm-rs"
repository = "https://github.com/No-tengo-nombre/wcomm-rs"
version = "0.1.2"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["telecommunications", "wireless", "iot"]
categories = ["science"]
exclude = [
    "examples/*/audio",
    "examples/*/image",
    "examples/*/img",
    "examples/*/resources",
    "test/*/audio",
    "test/*/image",
    "test/*/img",
    "test/*/resources",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fundsp = "0.6.4"
cpal = "0.13.5"
anyhow = "1.0.58"
wav = "1.0.0"
